syntax = "proto3";
package Jde.App.Proto.FromClient;

import "google/protobuf/timestamp.proto";
import "Common.proto";
import "App.proto";
import "Log.proto";

message AddSession{
	string domain=1;
	string login_name=2;
	uint32 provider_pk=3;
	string user_endpoint=4;
	bool is_socket = 5;
}

enum ERequestType{
	ERequestIdTypeNone = 0;
	UnsubscribeLogs = 1;
	Jwt = 2;
}

message Instance{
	string application=1;
	string host=2;
	uint32 pid=3;
	google.protobuf.Timestamp start_time=6;
	uint32 web_port=7;
	string instance_name=8;
	uint32 session_id=9;
}

message Query{
	string text=1;
	bool return_raw=2;
}

message Status{
	google.protobuf.Timestamp start_time=1;
	uint64 memory=2;
	repeated string details=5;
}

message ForwardExecution{
	uint32 app_pk = 1;
	uint32 app_instance_pk = 2; //0 for any
	bytes execution_transmission = 3;
}

message Unsubscription{
	repeated uint32 request_ids = 1;
}

message Message{
	uint32 request_id=1;
	oneof Value{
		AddSession add_session=2;//called from authenticators like OpcGateway
		Query query=3;
		Instance instance = 4;
		Jde.App.Log.Proto.LogEntryClient log_entry = 5;
		uint32 session_id = 6;  //Attach session id for the socket.
		uint32 session_info = 7;//called from other apps/web page to request information about session TODO graphql
		Status status = 8; //send current app status.
		Jde.App.Log.Proto.StringField string_field = 9; //send a string.
		Jde.App.Proto.StringMD5s request_strings = 10;
		bool subscribe_status = 11;//subscribe to application statuses.
		string subscribe_logs = 12;//subscribe to application logs.  TODO graphql
		Jde.Proto.Exception exception = 13;
		ERequestType request_type = 14;//Just the request id is needed.
		string subscription = 15;
		Unsubscription unsubscription = 16;

		ForwardExecution forward_execution = 31;//webPage->appServer to call execute with creds.
		ForwardExecution forward_execution_anonymous = 32;//call execute with no creds.
		bytes execute_anonymous = 33;//appServer->2ndServer, no user context.
		Jde.App.Proto.Execute execute = 34;//execute with user context.
		bytes execute_response = 35;
	}
}

message Transmission{
	repeated Message messages = 1;
}